Исправить ошибки валидации

--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@
                 <input type="link" name="" placeholder="Ссылка на картинку"
                     class="form-cards__input form-cards__input_type_link">
                 <input type="button" class="menu__button menu-cards__buttonCreate" value="Создать">
-                </input>
             </form>
         </div>
     </div>
     <template class = "card-template">
         <div class="card">
             <button class="card__button-delete" type="button"></button>
-            <img src="" alt="" class="card__image">
+            <img src="none" alt="none" class="card__image">
             <div class="card__description">
                 <h2 class="card__title"></h2>
                 <button class="card__button-like" type="button"></button>
