--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <template class = "card-template">
         <div class="card">
             <button class="card__button-delete" type="button"></button>
-            <img src="none" alt="none" class="card__image">
+            <img src="" alt="" class="card__image">
             <div class="card__description">
                 <h2 class="card__title"></h2>
                 <button class="card__button-like" type="button"></button>
@@ -73,7 +73,7 @@
         <div class="popup popup-image">
             <div class="popup-image__container">
                 <button class="popup-image__close-icon" type="button"></button>
-                <img class= "popup-image__open-image" src="" alt="">
+                <img class= "popup-image__open-image" src="none" alt="none">
                 <h2 class="popup-image__title"></h2>
         </div>
         </div>
