--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <template class = "card-template">
         <div class="card">
             <button class="card__button-delete" type="button"></button>
-            <img src="" alt="" class="card__image">
+            <img src="none" alt="none" class="card__image">
             <div class="card__description">
                 <h2 class="card__title"></h2>
                 <button class="card__button-like" type="button"></button>
