Разделить функции добавления карточек

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </form>
         </div>
     </div>
-    <div class="popup-cards">
+    <div class="popup popup-cards">
         <div class="menu-cards menu">
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
@@ -59,7 +59,7 @@
             </form>
         </div>
     </div>
-    <template class = "card-template">
+    <template class="card-template">
         <div class="card">
             <button class="card__button-delete" type="button"></button>
             <img src="none" alt="none" class="card__image">
@@ -68,15 +68,15 @@
                 <button class="card__button-like" type="button"></button>
             </div>
         </div>
-        </template>
+    </template>
 
-        <div class="popup popup-image">
-            <div class="popup-image__container">
-                <button class="popup-image__close-icon" type="button"></button>
-                <img class= "popup-image__open-image" src="none" alt="none">
-                <h2 class="popup-image__title"></h2>
+    <div class="popup popup-image ">
+        <div class="popup-image__container">
+            <button class="popup-image__close-icon" type="button"></button>
+            <img class="popup-image__open-image" src="none" alt="none">
+            <h2 class="popup-image__title"></h2>
         </div>
-        </div>
+    </div>
 
     <script src="./scripts/script.js"></script>
 </body>
