Исправить замечания по скрипту

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 <input type="text" name="" placeholder="Название" class="form-cards__input form-cards__input_type_text">
                 <input type="link" name="" placeholder="Ссылка на картинку"
                     class="form-cards__input form-cards__input_type_link">
-                <input type="button" class="menu__button menu-cards__buttonCreate" value="Создать">
+                <button type="submit" class="menu__button menu-cards__buttonCreate" value="Создать">
+                    Создать
+                </button>
             </form>
         </div>
     </div>
