--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </form>
         </div>
     </div>
-    <div class="popup popup-cards">
+    <div class="popup popup_type_cards">
         <div class="menu-cards menu">
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
@@ -72,11 +72,11 @@
         </div>
     </template>
 
-    <div class="popup popup-image ">
-        <div class="popup-image__container">
-            <h2 class="popup-image__title"></h2>
-            <img class="popup-image__open-image" src="none" alt="none">
-            <button class="popup-image__close-icon" type="button"></button>
+    <div class="popup popup_type_image ">
+        <div class="popup_type_image__container">
+            <h2 class="popup_type_image__title"></h2>
+            <img class="popup_type_image__open-image" src="none" alt="none">
+            <button class="menu__close-icon popup_type_image__close-icon" type="button"></button>
         </div>
     </div>
 
