--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         </div>
     </template>
 
-    <div class="popup popup_type_image ">
-        <div class="popup_type_image__container">
-            <h2 class="popup_type_image__title"></h2>
-            <img class="popup_type_image__open-image" src="none" alt="none">
-            <button class="menu__close-icon popup_type_image__close-icon" type="button"></button>
+    <div class="popup popup_type_image">
+        <div class="image-container">
+            <h2 class="image-container__title"></h2>
+            <img class="image-container__open-image" src="none" alt="none">
+            <button class="menu__close-icon image-container__close-icon" type="button"></button>
         </div>
     </div>
 
