исправить ошибки БЭМ

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="image-container">
             <h2 class="image-container__title"></h2>
             <img class="image-container__open-image" src="none" alt="none">
-            <button class="menu__close-icon image-container__close-icon" type="button"></button>
+            <button class="image-container__close-icon" type="button"></button>
         </div>
     </div>
 
