--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
         <div class="menu">
             <button class="menu__close-icon" type="button"></button>
             <h2 class="menu__title">Редактировать профиль</h2>
-            <form class="form" name="formMenu">
-                <input type="text" name="menuName" value="Жак-Ив Кусто" class="form__input form__input_type_name">
-                <input type="text" name="menuSubtitle" value="Исследователь океана"
+            <form class="form" novalidate name="formProfile" >
+                <input id = "user-name" type="text" name="menuName" required minlength="2" class="form__input form__input_type_name">
+                <span id= "user-name-error" class="form__error"></span>
+                <input id = "about" type="text" name="menuSubtitle" minlength="2" value="Исследователь океана"
                     class="form__input form__input_type_job">
-                <button type="submit" class="menu__button">
+                    <span id= "about-error" class="form__error"></span>
+                <button disabled type="submit" class="menu__button">
                     Сохранить
                 </button>
             </form>
@@ -51,10 +53,12 @@
         <div class="menu-cards menu">
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
-            <form class="form-cards" name="formCards">
-                <input type="text" name="" placeholder="Название" class="form-cards__input form-cards__input_type_text">
-                <input type="link" name="" placeholder="Ссылка на картинку"
+            <form class="form-cards" name="formCards"  novalidate>
+                <input id = "cardName" type="text" name="nameCard" placeholder="Название" minlength="2" maxlength="28" required novalidate class="form-cards__input form-cards__input_type_text">
+                <span id= "cardName-error" class="form__error"></span>
+                <input id = "link" type="url" name="linkCard" required novalidate minlength="2" placeholder="Ссылка на картинку"
                     class="form-cards__input form-cards__input_type_link">
+                    <span id= "link-error" class="form__error"></span>
                 <button type="submit" class="menu__button menu-cards__buttonCreate" value="Создать">
                     Создать
                 </button>
