--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <button class="menu__close-icon" type="button"></button>
             <h2 class="menu__title">Редактировать профиль</h2>
             <form class="form" novalidate name="formProfile" >
-                <input id = "user-name" type="text" name="menuName" required minlength="2" class="form__input form__input_type_name">
+                <input id = "user-name" type="text" name="menuName" required minlength="2" maxlength="40" placeholder="Жак-Ив Кусто" class="form__input form__input_type_name">
                 <span id= "user-name-error" class="form__error"></span>
-                <input id = "about" type="text" name="menuSubtitle" minlength="2" value="Исследователь океана"
+                <input id = "about" type="text" name="menuSubtitle" required minlength="2" maxlength="200" placeholder="Исследователь океана"
                     class="form__input form__input_type_job">
                     <span id= "about-error" class="form__error"></span>
                 <button disabled type="submit" class="menu__button">
@@ -54,12 +54,12 @@
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
             <form class="form-cards" name="formCards"  novalidate>
-                <input id = "cardName" type="text" name="nameCard" placeholder="Название" minlength="2" maxlength="28" required novalidate class="form-cards__input form-cards__input_type_text">
+                <input id = "cardName" type="text" name="nameCard" placeholder="Название" minlength="2" maxlength="30" required novalidate class="form-cards__input form-cards__input_type_text">
                 <span id= "cardName-error" class="form__error"></span>
                 <input id = "link" type="url" name="linkCard" required novalidate minlength="2" placeholder="Ссылка на картинку"
                     class="form-cards__input form-cards__input_type_link">
                     <span id= "link-error" class="form__error"></span>
-                <button type="submit" class="menu__button menu-cards__buttonCreate" value="Создать">
+                <button disabled type="submit" class="menu__button menu-cards__buttonCreate" value="Создать">
                     Создать
                 </button>
             </form>
@@ -83,7 +83,7 @@
             <button class="image-container__close-icon" type="button"></button>
         </div>
     </div>
-
+    <script src="./scripts/validate.js"></script>    
     <script src="./scripts/script.js"></script>
 </body>
 
