Сделать файловую структуру

--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
             <button class="image-container__close-icon" type="button"></button>
         </div>
     </div>
-    <script src="./scripts/validate.js"></script>    
     <script src="./scripts/script.js"></script>
+    <script src ="/scripts/cards.js"></script>
+    <script src="./scripts/validate.js"></script>   
+    <script src="./scripts/popup.js"></script>
+    <script src ="./scripts/buttons.js"></script>
+    
 </body>
 
 </html>
