--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <button class="menu__close-icon" type="button"></button>
             <h2 class="menu__title">Редактировать профиль</h2>
             <form class="form" novalidate name="formProfile" >
-                <input id = "user-name" type="text" name="menuName" required minlength="2" maxlength="40" placeholder="Жак-Ив Кусто" class="form__input form__input_type_name">
+                <input id = "user-name" type="text" name="menuName" required minlength="2" maxlength="40" placeholder="Имя" class="form__input form__input_type_name">
                 <span id= "user-name-error" class="error-span"></span>
-                <input id = "about" type="text" name="menuSubtitle" required minlength="2" maxlength="200" placeholder="Исследователь океана"
+                <input id = "about" type="text" name="menuSubtitle" required minlength="2" maxlength="200" placeholder="Вид деятельности"
                     class="form__input form__input_type_job">
                     <span id= "about-error" class="error-span"></span>
                 <button disabled type="submit" class="menu__button">
@@ -84,9 +84,7 @@
         </div>
     </div>
     <script src="./scripts/const.js"></script>
-    <script src ="./scripts/cards.js"></script>
-    <script src ="./scripts/popup.js"></script>
-    <script src="./scripts/buttons.js"></script>
+    <script src="./scripts/script.js"></script>
     <script src="./scripts/validate.js"></script>    
 
 </body>
