Исправить html файл

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="popup">
         <div class="menu">
-            <button class="menu__close-icon" id = "close-icon" type="button"></button>
+            <button class="menu__close-icon" type="button"></button>
             <h2 class="menu__title">Редактировать профиль</h2>
             <form class="form" novalidate name="formProfile" >
                 <input id = "user-name" type="text" name="menuName" required minlength="2" maxlength="40" placeholder="Имя" class="form__input form__input_type_name">
@@ -51,7 +51,7 @@
     </div>
     <div class="popup popup_type_cards">
         <div class="menu-cards menu">
-            <button class="menu__close-icon menu__card-close"  id = "close-icon" type="button"></button>
+            <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
             <form class=" form form-cards" name="formCards"  novalidate>
                 <input id = "cardName" type="text" name="nameCard" placeholder="Название" minlength="2" maxlength="30" required novalidate class="form__input form-cards__input form-cards__input_type_text">
