--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="menu-cards menu">
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
-            <form class=" form form-cards" name="formCards"  novalidate>
+            <form class="form form-cards" name="formCards"  novalidate>
                 <input id = "cardName" type="text" name="nameCard" placeholder="Название" minlength="2" maxlength="30" required novalidate class="form__input form-cards__input form-cards__input_type_text">
                 <span id= "cardName-error" class="error-span"></span>
                 <input id = "link" type="url" name="linkCard" required novalidate minlength="2" placeholder="Ссылка на картинку"
@@ -83,9 +83,9 @@
             <button class="image-container__close-icon" id = "close-icon" type="button"></button>
         </div>
     </div>
-    <script src="./scripts/const.js"></script>
+    <script src="./scripts/index.js"></script>
     <script src="./scripts/script.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="./scripts/FormValidator.js"></script>
 
 </body>
 
