--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
             <button class="image-container__close-icon" id = "close-icon" type="button"></button>
         </div>
     </div>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/FormValidator.js"></script>
+    <script src="./scripts/index.js" type = "module"></script>
 
 </body>
 
