Исправить верстку HTML

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
 
     <div class="popup popup_type_image">
         <div class="image-container">
-            <h2 class="image-container__title"></h2>
-            <img class="image-container__open-image" src="none" alt="none">
             <button class="image-container__close-icon" id = "close-icon" type="button"></button>
+            <img class="image-container__open-image" src="none" alt="none">
+            <figcaption class="image-container__title"></figcaption>
+            
         </div>
     </div>
     <script src="./scripts/index.js" type = "module"></script>
