--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="popup popup_type_image">
         <div class="image-container">
             <button class="image-container__close-icon" id = "close-icon" type="button"></button>
-            <img class="image-container__open-image" src="none" alt="none">
+            <img class="image-container__open-image" src="#" alt="none">
             <figcaption class="image-container__title"></figcaption>
             
         </div>
