--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
         </footer>
     </div>
-    <div class="popup">
+    <div class="popup popup_type_profile">
         <div class="menu">
             <button class="menu__close-icon" type="button"></button>
             <h2 class="menu__title">Редактировать профиль</h2>
