--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
             <form class="form form-cards" name="formCards"  novalidate>
-                <input id = "cardName" type="text" name="nameCard" placeholder="Название" minlength="2" maxlength="30" required novalidate class="form__input form-cards__input form-cards__input_type_text">
+                <input id = "cardName" type="text" name="name" placeholder="Название" minlength="2" maxlength="30" required novalidate class="form__input form-cards__input form-cards__input_type_text">
                 <span id= "cardName-error" class="error-span"></span>
-                <input id = "link" type="url" name="linkCard" required novalidate minlength="2" placeholder="Ссылка на картинку"
+                <input id = "link" type="url" name="link" required novalidate minlength="2" placeholder="Ссылка на картинку"
                     class="form__input form-cards__input form-cards__input_type_link">
                     <span id= "link-error" class="error-span"></span>
                 <button disabled type="submit" class="menu__button menu-cards__buttonCreate menu__submit" value="Создать">
