--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <img class="header__logo" src="<%=require('./images/vector/header__logo.svg')%>" alt="Лого">
         </header>
         <section class="profile">
+            <div class="profile__avatar-block">
+                <button type="button" class="profile__avatar-edit-button"></button>
             <img class="profile__avatar" src="<%=require('./images/jpg/kysto.jpg')%>" alt="Кусто">
+        </div>
             <article class="profile__info">
                 <div class="profile__heading">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -81,6 +84,15 @@
             <img class="image-container__open-image" src="#" alt="none">
             <figcaption class="image-container__title"></figcaption>
             
+        </div>
+    </div>
+
+    <div class="popup popup_type_avatar">
+        <div class="menu menu-avatar">
+            <h2 class="menu__title-avatar">Обновить аватар</h2>
+            <form class="form form-avatar">
+                <input type="url" name="link" required novalidate minlength="2" placeholder="Ссылка на картинку" class="form__input form-avatar__input">
+            </form>
         </div>
     </div>
 
