--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
             <article class="profile__info">
                 <div class="profile__heading">
-                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <h1 class="profile__name">Имя</h1>
                     <button type="button" class="profile__edit-button"></button>
                 </div>
-                <p class="profile__subtitle">Исследователь океана</p>
+                <p class="profile__subtitle">О себе</p>
             </article>
             <button type="button" class="profile__add-button"></button>
         </section>
@@ -42,7 +42,7 @@
             <form class="form" novalidate name="formProfile" >
                 <input id = "user-name" type="text" name="name" required minlength="2" maxlength="40" placeholder="Имя" class="form__input form__input_type_name">
                 <span id= "user-name-error" class="error-span"></span>
-                <input id = "about" type="text" name="job" required minlength="2" maxlength="200" placeholder="Вид деятельности"
+                <input id = "about" type="text" name="about" required minlength="2" maxlength="200" placeholder="Вид деятельности"
                     class="form__input form__input_type_job">
                     <span id= "about-error" class="error-span"></span>
                 <button disabled type="submit" class="menu__button menu__submit">
