Сделать видимым колличество лайков

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <div class="card__description">
                 <h2 class="card__title"></h2>
                 <button class="card__button-like" type="button"></button>
+                <span id ="like-info" class="like-info"></span>
             </div>
         </div>
     </template>
@@ -83,7 +84,6 @@
             <button class="image-container__close-icon" id = "close-icon" type="button"></button>
             <img class="image-container__open-image" src="#" alt="none">
             <figcaption class="image-container__title"></figcaption>
-            
         </div>
     </div>
 
