Создать изменение аватара

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div class="popup popup_type_profile">
         <div class="menu">
-            <button class="menu__close-icon" type="button"></button>
+            <button class="menu__close-icon close-icon" type="button"></button>
             <h2 class="menu__title">Редактировать профиль</h2>
             <form class="form" novalidate name="formProfile">
                 <input id="user-name" type="text" name="name" required minlength="2" maxlength="40" placeholder="Имя"
@@ -54,7 +54,7 @@
     </div>
     <div class="popup popup_type_cards">
         <div class="menu-cards menu">
-            <button class="menu__close-icon menu__card-close" type="button"></button>
+            <button class="menu__close-icon menu__card-close close-icon" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
             <form class="form form-cards" name="formCards" novalidate>
                 <input id="cardName" type="text" name="name" placeholder="Название" minlength="2" maxlength="30"
@@ -84,7 +84,7 @@
 
     <div class="popup popup_type_image">
         <div class="image-container">
-            <button class="image-container__close-icon" id="close-icon" type="button"></button>
+            <button class="image-container__close-icon close-icon" id="close-icon" type="button"></button>
             <img class="image-container__open-image" src="#" alt="none">
             <figcaption class="image-container__title"></figcaption>
         </div>
@@ -94,7 +94,7 @@
         <div class="menu menu-avatar">
             <h2 class="menu__title-avatar">Обновить аватар</h2>
             <form class="form form-avatar">
-                <button class="menu__close-icon form-avatar__close-icon" type="button"></button>
+                <button class="menu__close-icon form-avatar__close-icon close-icon" type="button"></button>
                 <input id="avarat-link" type="url" name="link" required novalidate minlength="2"
                     placeholder="Ссылка на картинку" class="form__input form-avatar__input">
                 <span id="avarat-link-error" class="error-span menu-avatar__error-span"></span>
@@ -104,7 +104,7 @@
     </div>
     <div class="popup popup_type_confirm">
         <div class="menu menu-confirm">
-            <button class="menu__close-icon menu-confirm__close-icon" type="button"></button>
+            <button class="menu__close-icon menu-confirm__close-icon close-icon" type="button"></button>
             <h2 class="menu__title menu-confirm__title">Вы уверены?</h2>
             <button class="menu-confirm__button menu__button">Да</button>
         </div>
