--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="menu menu-confirm">
             <button class="menu__close-icon menu-confirm__close-icon close-icon" type="button"></button>
             <h2 class="menu__title menu-confirm__title">Вы уверены?</h2>
-            <button class="menu-confirm__button menu__button">Да</button>
+            <button class="menu-confirm__button menu__button menu__submit">Да</button>
         </div>
     </div>
 </body>
