--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="profile">
             <div class="profile__avatar-block">
                 <button type="button" class="profile__avatar-edit-button"></button>
-                <img class="profile__avatar" src="" alt="Кусто">
+                <img class="profile__avatar" src="#" alt="Кусто">
             </div>
             <article class="profile__info">
                 <div class="profile__heading">
